decrease text spacing to prevent wrapping of perfect % widths

--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,7 @@
 @import "./src/mixins";
 
 .grid {
-	letter-spacing: -0.25em;
+	letter-spacing: -0.26em;
 }
 
 .grid__unit {
